--- a/list.html
+++ b/list.html
@@ -70,7 +70,7 @@
         </nav>
     </div>
 
-    <!-- 訊問清單內容 -->
+    <!-- 清單內容 -->
     <div class="listHead">
         <h3>詢問清單</h3>
     </div>
@@ -78,15 +78,17 @@
     <div class="listContent">
         <ul>
             <li class="listTitle">
+                <p>商品圖片</p>
                 <p>商品名稱</p>
                 <p>數量</p>
             </li>
             <li class="listItem">
                 <img class="listProduct" src="./Product/Product pic/product-6.png" alt="">
-                <p>燒酌梅酒<br>600ml</p>
+                <p>燒酌梅酒</p>
                 <input class="listNum" type="number" name="updates[]" value="1" min="0">
                 <i class="far fa-trash-alt"></i>
             </li>
+            
         </ul>
     </div>
 
